# AxiomHive-LexLab

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  NOTES.md  PRINCIPLES.md  PURCHASE_FLOW.md  README.md  STRATEGY.md  combined.txt  demo-chat.html  legend_manifest.json  run_local.ps1  supremacy_kernel.py  torch.py  transformers.py
.reversibility/: rollback.ps1
IntegrityForge/: DEPLOYMENT.md  GITHUB_PUBLISHING_GUIDE.md  PRINCIPLES.md  README.md  STRATEGY.md  requirements.txt  setup.py  test_file.txt
VALIDATION/: integrity_attestation.txt.bak
axiom_hive/: DEPLOYMENT.md  PRINCIPLES.md  README.md  STRATEGY.md  lhc.yaml  pyproject.toml
axiom_hive/examples/: simple_hive.py
axiom_hive/src/axiom_hive/: __init__.py  benchmark.py  compression.py  dag.py  formal_proof.py  sanctity.py  shard.py
axiom_hive/tests/: test_sanctity.py
axiomhive/AxiomHash/: README.md  pyproject.toml
axiomhive/AxiomHash/src/: axiomhash_cli.py
axiomhive/AxiomHash/tests/: test_cli.py  test_hash.py
backend/: requirements.txt  run.sh
docs/: README.md
ezc/: Cargo.toml
frontend/: index.html  package-lock.json  package.json  script.js  style.css
lexlab/: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  PR_BODY.md  README.md
schemas/: deployment.schema.json  principles.schema.json  strategy.schema.json
scripts/: align_attestation.ps1  build_all.ps1  build_all.sh  checksums.sh  compute-integrity.ps1  compute_attestation.py  package_zip.sh  run_smoke_tests.py  sign_gpg.sh  validate_workspace.py
src/: __init__.py  main.py
stubs/: __init__.py  neo4j.py  qiskit.py  (+3 more)
(+49 files in other folders)
