[project]
name = "axiomhash"
version = "0.1.0"
description = "Streaming SHA-256 and Merkle utilities for AxiomHive"
authors = [ { name = "AxiomHive" } ]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomhash"
version = "2.0.0"
description = "AxiomHash streaming hasher and Merkle-root stub"
authors = [{name = "Alexis Adams"}]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "axiomhash"
version = "0.1.0"
description = "AxiomHash v2.0 - streaming hasher with Merkle stub"
authors = ["AxiomHive"]
